@@ -24,6 +24,8 @@ Features
 --------
 
 * Add Friulian translation by aoanla
+* Add ``REST_FILE_INSERTION_ENABLED`` config option to enable or disable reST
+  external file inclusion directives. (Issue #3311)
 
 New in v8.0.2
 =============
